# CG

lab_03/: CMakeLists.txt  main.cpp
lab_03/inc/: DrawLine.h  TimeManager.cpp
lab_03/inc/Qt/: EditLineUpdated.h  EntryLineCoords.h  GraphicWidget.h  ICoordsGetter.h  IDrawTypeGetter.h  ISpectreInformationGetter.h  StairsGraphic.cpp
lab_03/src/: CheckString.cpp  DrawLine.cpp
lab_03/src/Qt/: DrawColorComboBox.cpp  DrawTypeComboBox.cpp  GraphicWidget.cpp  MainMenu.cpp
lab_04/: CMakeLists.txt
lab_04/inc/: CheckString.h  DrawLine.h  TimeManager.h
lab_04/inc/Qt/: CirclePartUI.h  CircleSpectrePartUI.h  DrawColorComboBox.h  DrawTypeComboBox.h  EllipsePartUI.h  EllipseSpectrePartUI.h  GraphicWidget.h  ICircleInformationGetter.h  ICircleSpectreInformationGetter.h  IConverter.h  IDrawColorGetter.h  IEllipseInformationGetter.h  IEllipseSpectreInformationGetter.h  MainMenu.h  SpectreUI.h  StairsGraphic.h
lab_04/src/: DrawLine.cpp  TimeManager.cpp
lab_04/src/Qt/: CirclePartUI.cpp  CircleSpectrePartUI.cpp  DrawTypeComboBox.cpp  EditLineUpdated.cpp  EllipsePartUI.cpp  EllipseSpectrePartUI.cpp  EntryLineCoords.cpp  GraphicWidget.cpp  MainMenu.cpp  SpectreUI.cpp  StairsGraphic.cpp
lab_05/: CMakeLists.txt
lab_05/inc/: CanvasPolygon.h  MainWindowUI.h
lab_05/src/: CanvasPolygon.cpp  MyMainWindow.cpp
lab_06/: CMakeLists.txt  main.cpp
lab_06/a/: Makefile  moc_CanvasPolygon.cpp
lab_06/inc/: CanvasPolygon.h  MyMainWindow.h
lab_06/src/: CanvasPolygon.cpp
lab_07/: CMakeLists.txt  v2.pro
lab_07/inc/: CanvasPolygon.h  MiddleDot.cpp  MiddleDot.h  Rectangle.h
lab_07/src/: CanvasPolygon.cpp  MyMainWindow.cpp  Rectangle.cpp
lab_08/: CMakeLists.txt  v2.pro
lab_08/b/: Makefile  moc_CanvasPolygon.cpp
lab_08/inc/: CanvasPolygon.h  MainWindowUI.h  MyMainWindow.h  Vector.h
lab_08/src/: CanvasPolygon.cpp  MyMainWindow.cpp  Vector.cpp
lab_09/: CMakeLists.txt  main.cpp  mainwindow.ui
lab_10/: CMakeLists.txt  mainwindow.ui
